Update users, and add centos8 version

--- a/compiladores/2021/Dockerfile
+++ b/compiladores/2021/Dockerfile
@@ -1,6 +1,8 @@
-FROM debian:bullseye
+FROM debian:buster
+
+ARG USERNAME=compiladores
+ARG USER_UID=1000
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-      llvm-9 clang-9 flex bison
-
+    apt-get install -y llvm-7 clang-7 flex bison && \
+    useradd -s /bin/bash -u $USER_UID -m $USERNAME
